--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         </activity>
 
 
-        <service android:name="com.example.android.bluetoothlegatt.BluetoothLeService" android:enabled="true"/>
+        <service android:name="com.lady.viktoria.contournextonereader.services.BGMeterGattService" android:enabled="true"/>
 
     </application>
 
